replace enum AppRole with entity Role