@@ -2,16 +2,17 @@ package meetona.data.runners;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import meetona.core.entity.Role;
 import meetona.core.entity.User;
-import meetona.core.enums.Role;
+import meetona.core.enums.AppRole;
+import meetona.data.repository.RoleRepository;
 import meetona.data.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
-import java.util.Collection;
-import java.util.Set;
+import java.util.Collections;
 
 @Slf4j
 @Component
@@ -28,18 +29,19 @@ public class AdminRunner implements CommandLineRunner {
     private String PASSWORD;
 
     private final UserRepository userRepository;
+    private final RoleRepository roleRepository;
     private final PasswordEncoder passwordEncoder;
-    Collection<Role> roles = Set.of(Role.ADMIN);
 
     @Override
     public void run(String... args) throws Exception {
-        boolean existsAdmin = userRepository.existsByRoles(roles);
+        Role role = roleRepository.findByName(AppRole.ADMIN);
+        boolean existsAdmin = userRepository.existsByRoles(role);
 
         if (!existsAdmin) {
             User adminUser = User.builder()
                     .username(USERNAME)
                     .email(EMAIL)
-                    .roles(Set.of(Role.ADMIN))
+                    .roles(Collections.singleton(role))
                     .isEmailVerified(true)
                     .password(passwordEncoder.encode(PASSWORD))
                     .build();
